Added german translation and datetime picker
git-svn-id: http://svn.web-wack.at/ispconfig3_roundcube/trunk@53 7307f981-e087-44a5-86c2-13037a2ccb1f

--- a/ispconfig3_autoreply/skins/default/templates/autoreply.html
+++ b/ispconfig3_autoreply/skins/default/templates/autoreply.html
@@ -4,9 +4,12 @@
 <title><roundcube:object name="pagetitle" /></title>
 <roundcube:include file="/includes/links.html" />
 <link rel="stylesheet" type="text/css" href="/settings.css" />
+<link type="text/css" href="/this/css/smoothness/jquery-ui-1.7.2.custom.css" rel="stylesheet" />
 <script type="text/javascript" src="/functions.js"></script>
 </head>
 <body class="iframe">
+<script type="text/javascript" src="/this/js/jquery-ui-1.7.2.custom.min.js"></script>
+<script type="text/javascript" src="/this/js/timepicker.js"></script>
 <div id="prefs-title" class="boxtitle"><roundcube:object name="sectionname_autoreply" /></div>
 <form name="autoreplyform" action="./?_task=settings&_action=plugin.ispconfig3_autoreply.save&_framed=1" method="post">
 <div id="prefs-details">
